--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/styles.css">
-    <script src="JS/scritp.js" defer></script>
+    <script src="JS/script.js" defer></script>
 </head>
 <body>
     <!-- Cabeçalho -->
